Added styles to the recipe pages

--- a/recipes/ground-beef-vegetable-soup.html
+++ b/recipes/ground-beef-vegetable-soup.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ground Beef Vegetable Soup</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <a href="../index.html" target="_blank">Home</a>
-    <h1>Ground Beef Vegetable Soup</h1>
+    <h1 class="title text">Ground Beef Vegetable Soup</h1>
     <img src="./images/Jauhelihakeitto.jpg" alt="Ground Beef Vegetable Soup">
-    <h2>Description</h2>
-    <p>This ground beef soup is full of vegetables for a satisfying, very easy, and delicious meal to serve any time of the year. Serve with saltine crackers and chunks of sharp cheese.</p>
-    <h2>Ingredients</h2>
-    <ul>
+    <h2 class="subheading text">Description</h2>
+    <p class="description text">This ground beef soup is full of vegetables for a satisfying, very easy, and delicious meal to serve any time of the year. Serve with saltine crackers and chunks of sharp cheese.</p>
+    <h2 class="subheading text">Ingredients</h2>
+    <ul class="text">
         <li>2 pounds ground beef</li>
         <li>4 carrots, diced</li>
         <li>4 celery ribs, chopped</li>
@@ -28,8 +29,8 @@
         <li>⅛ teaspoon ground thyme</li>
         <li>¼ cup water, as needed</li>
     </ul>
-    <h2>Steps</h2>
-    <ol>
+    <h2 class="subheading text">Steps</h2>
+    <ol class="text">
         <li>Crumble ground beef into a stockpot over medium-high heat; cook and stir until beef is crumbly, evenly browned, and no longer pink, 7 to 10 minutes. Drain and discard any excess grease.</li>
         <li>Stir in carrots, celery, and onion; cook and stir until vegetables are soft, about 5 minutes.</li>
         <li>Stir in potatoes, corn, green beans, undrained peas, tomato sauce, and crushed whole tomatoes. Season with black pepper; add bay leaf and thyme.</li>
