--- a/recipes/minced-meat-casserole.html
+++ b/recipes/minced-meat-casserole.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minced Meat Casserole</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <a href="../index.html" target="_blank">Home</a>
-    <h1>Minced Meat Casserole</h1>
+    <h1 class="title text">Minced Meat Casserole</h1>
     <img src="./images/Makaronilaatikko.jpg" alt="Minced Meat Casserole">
-    <h2>Description</h2>
-    <p>This cheesy beef and pasta casserole is sure to be a hit with the kiddos. It’s also easily adaptable based on what you’ve got in the fridge/pantry/etc. You could throw in some extra veggies if you want. It’s very tasty for how few ingredients are in this budget-friendly meal</p>
-    <h2>Ingredients</h2>
-    <ul>
+    <h2 class="subheading text">Description</h2>
+    <p class="description text">This cheesy beef and pasta casserole is sure to be a hit with the kiddos. It’s also easily adaptable based on what you’ve got in the fridge/pantry/etc. You could throw in some extra veggies if you want. It’s very tasty for how few ingredients are in this budget-friendly meal</p>
+    <h2 class="subheading text">Ingredients</h2>
+    <ul class="text">
         <li>1 pound uncooked penne</li>
         <li>1 tablespoon olive oil</li>
         <li>1 pound lean ground beef</li>
@@ -22,8 +23,8 @@
         <li>Salt & pepper to taste</li>
         <li>1.5 cups shredded cheddar cheese</li>
     </ul>
-    <h2>Steps</h2>
-    <ol>
+    <h2 class="subheading text">Steps</h2>
+    <ol class="text">
        <li>Preheat your oven to 400F and move the rack to the middle position. Grease a 9×13 baking dish (I use Pam spray).</li>
        <li>Boil a large, salted pot of water for the penne. Cook it for 10 minutes (it should be slightly underdone so it doesn't get mushy).</li>
        <li>Add the oil, beef, and onion to a skillet. Sauté over medium-high heat, breaking the meat up as you go along, for 10 minutes. Once it gets going, stir in the garlic. Spoon out excess fat if needed.</li>
